# LLMTournaments

./: .gitignore  README.md  pyproject.toml
demos/: credit_exchanges.ipynb
llmtournaments/: credit_exchanges.py  split_or_splt_game.py
llmtournaments/demos/: credit_exchanges.ipynb  custom_game.ipynb  split_or_splt_game.ipynb  split_or_steal_game.ipynb
llmtournaments/games/: custom_game.py
llmtournaments/games/credit_exchanges/: base_objects.py  credit_exchanges_game.py  observers.py  prompt_manager.py
llmtournaments/llm/: __init__.py  llm_interaction_base.py
llmtournaments/llm/generators/: abacus_api.py  dummy_llm.py  dummy_llm_02.py  dummy_llm_03.py  local_gguf_llamacpp.py  sandbox.ipynb
