[tool.poetry]
name = "llmtournaments"
version = "0.1.0"
description = ""
authors = ["Federico M."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
python-dotenv = "^1.0.1"
tabulate = "^0.9.0"
colorama = "^0.4.6"
jinja2 = "^3.1.5"
abacusai = "^1.4.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
